log/build_2026-01-13_17-48-30/mio_primo_pkg/stderr.log
  File "/home/francesco/LIMO_prj/install/mio_primo_pkg/lib/python3.10/site-packages/mio_primo_pkg/nodo_prova.py", line 6
    6 super () . __init__ ( ’ nome_del_nodo ’)
                            ^
SyntaxError: invalid character '’' (U+2019)

